Replace Collections.singletonList() with List.of()
Use the more modern and concise List.of() factory method instead of
Collections.singletonList() for creating immutable single-element lists.
This is the preferred approach in Java 9+.

🤖 Generated with [Claude Code](https://claude.com/claude-code)

Co-Authored-By: Claude <noreply@anthropic.com>